# Vortox

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CREDITS.md  LICENSE  LICENSE.md  Makefile  README.md  build.sh  cmake_install.cmake  correct_hash.TXT  editor.sh  hash.sh  imgui.ini  naming.TXT  nocomments.sh
level_editor/: editor.cpp  editor.cpp.clean  editor.hpp  imgui.ini
levels/: d1.xym  level.xym
lib/: README.txt
lib/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h
lib/imgui/misc/fonts/: binary_to_compressed_c.cpp
shaders/main/: fragment.frag  vertex.vert
shaders/text/: fragment.frag
src/: pch.h
src/audio/: audio.cpp  audio.hpp
src/console/: console.cpp  console.hpp
src/core/: SDLContext.hpp  globals.cpp  globals.hpp  main.cpp  main.hpp
src/errors/: error.cpp  error.hpp
src/fonts/: fonts.cpp  fonts.hpp
src/graphics/: render.cpp  render.hpp  texture.cpp  texture.hpp
src/levels/: load.cpp  load.hpp  struct.hpp
src/logsystem/: log.cpp  log.hpp
src/player/: collision.cpp  collision.hpp  input.cpp  input.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
src/player/physics/: collision.cpp  collision.hpp
src/shaders/: readShaders.cpp  shaders.cpp  shaders.hpp
